fix: Created new ControlPanel for map functions to fix issue with control icons not displaying, code clean up, update of tabler icons package to align with package used in a32nx

--- a/src/Map/Map.scss
+++ b/src/Map/Map.scss
@@ -10,6 +10,21 @@
   // Prevent leaflet from setting its own font
   font-family: "Nunito Sans", sans-serif !important;
 
+  #control-panel {
+    pointer-events: all !important;
+    margin-bottom: 1.75rem;
+    margin-right: 1rem;
+    .button-group {
+      margin-top: 1rem;
+      button {
+        border-bottom: 1px solid #ccc;
+        &:last-of-type {
+          border-bottom: 0;
+        }
+      }
+    }
+  }
+
   #menu-panel {
     pointer-events: all !important;
     margin: 1rem;
@@ -84,18 +99,12 @@
     cursor: pointer;
   }
 
-  a.polyline-measure-controlOnBgColor,
-  a.polyline-measure-controlOnBgColor:hover {
-    background-color: #8f8;
+  #polyline-measure-control, .polyline-measure-clearControl, #unitControlId {
+    display: none;
   }
 
-  .polyline-measure-unicode-icon {
-    font-size: 19px;
-    font-weight: bold;
-  }
-
-  a.polyline-measure-clearControl:active {
-    background-color: #f88;
+  .leaflet-top.leaflet-left > .leaflet-bar {
+    border: 0;
   }
 
   .polyline-measure-tooltip {
